# snakesystem-web-api

./: .gitignore  Cargo.toml
exports/: tempimport.csv  tempimport.dbf  tempimport.txt  tempimport.xlsx  tempimport.xml
src/: main.rs  main_backup.rs
src/backups/: mail_service_backup.rs
src/contexts/: connection.rs  jwt_session.rs  model.rs  socket.rs
src/handlers/: auth_handler.rs  data_handler.rs  email_handler.rs  export_handler.rs  generic_handler.rs  import_handler.rs  library_handler.rs  mail_handler.rs
src/services/: auth_service.rs  data_service.rs  export_service.rs  generic_service.rs  import_service.rs  library_service.rs  mail_service.rs
src/utils/: api_doc.rs
templates/: docs.json  docs.mustache  mail_from.mustache  mail_to.mustache  order-data.stpl
templates/downloads/: order-data.txt  order-data.xlsx  tempimport.csv  tempimport.dbf  tempimport.xml
templates/uploads/: files.mustache
