[package]
name = "snakesystem-web-api"
version = "0.1.0"
edition = "2021"

include = ["templates/**/*"]

[dependencies]
actix-web = "4.3.1"
shuttle-actix-web = "0.53.0"
shuttle-runtime = "0.53.0"
tokio = "1.26.0"
tiberius = { version="0.12.3" , features = ["sql-browser-tokio", "chrono"]}
bb8 = "0.9.0"
bb8-tiberius = "0.16.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
handlebars = "6.3.1"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
chrono = { version = "0.4.40", features = ["serde"] }
aes = "0.8.4"
sha2 = "0.10.8"
base64 = "0.22.1"
ctr = "0.9.2"
validator = { version = "0.20.0", features = ["derive"] }
image = "0.25.6"
regex = "1.11.1"
rand = "0.9.1"
jsonwebtoken = "9.3.1"
actix-session = { version = "0.10.1", features = ["cookie-session"] }